--- a/src/components/Paginate/Paginate.module.css
+++ b/src/components/Paginate/Paginate.module.css
@@ -1,3 +1,6 @@
+.pag {
+    background: navajowhite;
+}
 .pagination {
     margin: 70px 20px 20px 20px;
     display: flex;
@@ -34,5 +37,6 @@
 .pagination > li:first-child > a, .pagination > li:first-child > span, .pagination > li:last-child > a, .pagination > li:last-child > span{
     border-radius: 10px;
 }
+
 
 
