--- a/src/components/ModalForm/ModalForm.module.css
+++ b/src/components/ModalForm/ModalForm.module.css
@@ -1,25 +1,46 @@
+.initialState{
+    text-align: center;
+    font-size: 30px;
+    font-family: Snell Roundhand, cursive;
+
+}
+
+.nextState{
+    text-align: center;
+    font-size: 35px;
+    font-family: Snell Roundhand, cursive;
+}
+
+
+
 .main{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
+.buttonContainer {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .btn{
-    width: 70px;
-    height: 50px;
+    width: 200px;
+    height: 40px;
     border-radius: 8px;
     border: none;
-    font-size: 16px;
+    font-size: 18px;
     font-family: Snell Roundhand, cursive;
     background: #845EC2;
     color: white;
     cursor: pointer;
     transition-duration: 0.4s;
-    margin: 5px;
+    margin: 15px;
+
 }
 
 .btn:hover{
-    /*width: 80px;*/
+    width: 250px;
     /*height: 60px;*/
     background: white;
     color: #4E8397;
