--- a/src/components/ModalFormWithChoice/ModalFormWithChoice.module.css
+++ b/src/components/ModalFormWithChoice/ModalFormWithChoice.module.css
@@ -6,12 +6,14 @@
     margin: 10px;
 }
 
-.input{
+.input {
     width: 70%;
     height: 50px;
     border-radius: 8px;
-    border: none;
+    border: 1px solid #ccc;
     margin: 5px;
     font-size: 16px;
-    font-family: Snell Roundhand, cursive;
+    font-family: 'Snell Roundhand', cursive;
 }
+
+
