--- a/src/components/FilterForm/FilterForm.module.css
+++ b/src/components/FilterForm/FilterForm.module.css
@@ -1,12 +1,8 @@
-.contain{
+.first{
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
-    margin: 10px;
 }
 
-.input {
+.input{
     width: 170px;
     height: 50px;
     border-radius: 8px;
@@ -16,4 +12,11 @@
     font-family: 'Snell Roundhand', cursive;
 }
 
+.contain{
+    margin: 10px;
+}
 
+.second{
+    display: flex;
+
+}
