--- a/src/components/ModalForm/ModalForm.module.css
+++ b/src/components/ModalForm/ModalForm.module.css
@@ -33,7 +33,7 @@
     border: none;
     font-size: 18px;
     font-family: Snell Roundhand, cursive;
-    background: #845EC2;
+    background: #879789;
     color: white;
     cursor: pointer;
     transition-duration: 0.4s;
@@ -55,7 +55,7 @@
     border: none;
     font-size: 18px;
     font-family: Snell Roundhand, cursive;
-    background: #845EC2;
+    background: #879789;
     color: white;
     cursor: pointer;
     transition-duration: 0.4s;
