--- a/src/pages/LoginPage/LodinPage.module.css
+++ b/src/pages/LoginPage/LodinPage.module.css
@@ -1,7 +1,7 @@
 .card {
     width: 400px;
     height: 400px;
-    background: linear-gradient(90deg, #845EC2, #B39CD0, #FBEAFF);
+    background: #D5CABD;
     color: white;
     position: absolute;
     top: 50%;
@@ -43,7 +43,7 @@
     border: none;
     font-size: 16px;
     font-family: Snell Roundhand, cursive;
-    background: #845EC2;
+    background: #879789;
     color: white;
     cursor: pointer;
     transition-duration: 0.4s;
