--- a/src/components/ModalFormInput/ModalFormInput.module.css
+++ b/src/components/ModalFormInput/ModalFormInput.module.css
@@ -7,12 +7,21 @@
 }
 
 .input{
-    width: 70%;
-    max-width: 98%;
+    width: 150px;
+    /*max-width: 98%;*/
     height: 50px;
     border-radius: 8px;
     border: none;
     margin: 5px;
     font-size: 16px;
     font-family: Snell Roundhand, cursive;
+}
+
+input[type="date"]:before {
+    color: lightgrey;
+    content: attr(placeholder) !important;
+    margin-right: 0.5em;
+}
+input[type="date"]:focus:before {
+    content: '' !important;
 }
