--- a/src/components/Headline/Headline.module.css
+++ b/src/components/Headline/Headline.module.css
@@ -40,3 +40,19 @@
     background: #AFB09F;
 
 }
+
+.surname{
+    display: flex;
+    align-items: center;
+    font-family: Snell Roundhand, cursive;
+    font-weight: 500;
+    font-size: 17px;
+    padding: 0.8em 1.5em 0.8em 1.2em;
+    color: white;
+    background: #D5CABD;
+    border: solid 2px #D5CABD;
+    margin: 10px;
+    border-radius: 20em;
+
+
+}
