--- a/src/components/Headline/Headline.module.css
+++ b/src/components/Headline/Headline.module.css
@@ -56,3 +56,56 @@
 
 
 }
+
+.modalCustom {
+    left: 50%;
+    top: 50%;
+    position: fixed;
+    width: 60%;
+    max-height: 98%;
+    transform: translate(-50%, -50%);
+    overflow: auto;
+    background: #AFB09F;
+    border-radius: 20px;
+    color: white;
+    font-family: Snell Roundhand, cursive;
+    font-size: 25px;
+    transition: opacity .5s;
+
+}
+
+.modalCustom--invisible {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.modalCustom--visible {
+    opacity: 1;
+    pointer-events: initial;
+}
+
+.btns{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn2{
+    width: 200px;
+    height: 40px;
+    border-radius: 8px;
+    border: none;
+    font-size: 18px;
+    font-family: Snell Roundhand, cursive;
+    background: #879789;
+    color: white;
+    cursor: pointer;
+    transition-duration: 0.4s;
+    margin: 5px;
+}
+
+.btn2:hover{
+    width: 250px;
+    background: white;
+    color: #4E8397;
+}
