--- a/src/components/User/User.module.css
+++ b/src/components/User/User.module.css
@@ -8,6 +8,12 @@
     font-family: Snell Roundhand, cursive;
 }
 
-.info {
+.error {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Snell Roundhand, cursive;
+    font-size: 17px;
+
 
 }
